# anvil

./: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CHANGES.md  CLAUDE.md  CODEBASE_ANALYSIS.md  COMMIT.md  Cargo.toml  DEVELOPMENT_NOTES.md  DOCTRINE_ENFORCEMENT.md  GEMINI.md  KNOWLEDGE_MAP.md  MEMORY.md  MEMORY_ARCHITECTURE.md  README.md  ROADMAP.md  SESSION_BOOTSTRAP.md  TOOLBOX.md  USER_GUIDE.md  action.yml
.claude/: settings.json
.githooks/: commit-msg  pre-commit
.github/: copilot-instructions.md
.github/workflows/: action-selftest.yml  ci.yml  pages.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  agent-mcp.md  algorithm.md  api-introspection.md  api-reference.md  api-resources-prompts.md  api-tools.md  architecture.md  by-construction.md  construction-strategies.md  core-idea.md  factorization.md  faq.md  getting-started.md  hierarchy.md  introduction.md  ir.md  knobs.md  non-goals.md  non-triviality.md  recipes.md  sequential.md  sharing.md  structural-rules.md  structured-emission.md  synthesizability.md  tutorial.md  why-not-grammar.md
docs/: AGENT_INTROSPECTION_SCHEMA.md  TASK_TREE.md  TASK_TREE_README.md  coverage-baseline.md
docs/decisions/: 0001-task-tree-and-commit-doctrine.md  0002-live-doc-path-portability.md  0003-resource-safe-validation.md  0004-agent-introspection-mcp-lane.md  0005-agent-mcp-expansion-surface.md  0006-signoff-automation-first-increment.md  0007-identity-deepening-first-extension.md  0008-identity-deepening-whole-module-sequential-equivalence.md  0009-sv-version-targeting.md  0010-sv-version-first-upopt-soft-packed-union.md  0011-semantic-introspection-derived-query-surface.md  0012-structured-emission-first-surface-combinational-function.md  0013-structured-emission-second-surface-generate-loop.md  0014-structured-emission-third-surface-combinational-task.md  0015-structured-emission-fourth-surface-wide-lane-generate-loop.md  0016-structured-emission-fifth-surface-cone-function.md  0017-api-first-everything-mcp-accessible.md  0018-bug-hunt-orchestration-loop.md  0019-acceptance-divergence-hunting.md  0020-downstream-adapter-interface.md  0021-knob-ergonomics-presets-and-queryable-catalog.md  0022-ci-packaging-prebuilt-binaries-and-github-action.md  0023-coverage-steered-generation.md  0024-mealy-fsm-outputs.md  INDEX.md  (+5 more)
examples/: generate_one.rs
knowledge-map/: FAQ.md  KNOWLEDGE_MAP_ARCHITECTURE.md  README.md  install.sh
scripts/: anvil_hunt_action.sh  check_diagnosis_evidence.sh  check_doctrines.sh  check_memory_architecture.sh  check_task_tree_ownership.sh  ram_guard.sh
src/: config.rs  lib.rs  main.rs  manifest.rs  mem_guard.rs  metrics.rs
src/diff_sim/: mod.rs
tests/: book_examples.rs  diff_sim.rs  divergence_e2e.rs  frontend_parity.rs  hunt_e2e.rs  microdesign_parity.rs  pipeline.rs  slang_e2e.rs  snapshots.rs  sv2v_e2e.rs  sv_version.rs  sv_version_downstream.rs
(+147 files in other folders)
