[package]
name = "anvil"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "Random by-construction generator of synthesizable SystemVerilog RTL"
license = "MIT OR Apache-2.0"
default-run = "anvil"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
insta = "1"

[[bin]]
name = "anvil"
path = "src/main.rs"

[lib]
name = "anvil"
path = "src/lib.rs"
