[package]
name = "anvil"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "Random by-construction generator of synthesizable SystemVerilog RTL"
license = "MIT OR Apache-2.0"
default-run = "anvil"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
# Explicit pin (INSTA-SNAPSHOTS.1): the snapshot tooling itself must be
# deterministic — a silent `insta` minor bump could change snapshot
# formatting and mass-invalidate baselines. Pinned to the version in
# the local registry cache (offline-safe).
insta = "=1.47.2"
# Test-only: integration tests link the crate as an external crate and so
# cannot name its regular `[dependencies]`; the `BUG-HUNT-ORCHESTRATION.2e`
# real-tool e2e gate parses the `anvil hunt` `HuntReport` JSON. Same major as
# the regular dependency, so Cargo unifies it (no second build of serde_json).
serde_json = "1"

[[bin]]
name = "anvil"
path = "src/main.rs"

# AGENT-INTROSPECTION-MCP.4 — the read-only MCP server. Explicit so the
# target is the hyphenated `anvil-mcp` (matching decision 0004) instead of
# the auto-discovered file-stem name. A separate target ⇒ the default
# `anvil` build / `--artifact dut` contract are unaffected.
[[bin]]
name = "anvil-mcp"
path = "src/bin/anvil_mcp.rs"

[lib]
name = "anvil"
path = "src/lib.rs"
